# pstg

./: CHANGELOG.en.md  CHANGELOG.md  LICENSE  NOTICE  README-signals-simulator.md  README-simulator.md  README.en.md  README.md  RELEASE_NOTES.en.md  RELEASE_NOTES.md  RELEASE_PAGE.en.md  RELEASE_PAGE.md  pyproject.toml  simulator.example.json  simulator.signals.example.json
.devcontainer/: devcontainer.json
app/: collector.py
domain/: connection_state.py  error_info.py  kind_state.py  modbus_config.py  modbus_device_read_settings.py  poll_result.py  raw_block_result.py
drivers/: open_connection_modbus_tcp.py  read_fc03_holding_register.py  read_fc04_input_regoster.py
src/: main.py  pstg-probe.py
src/proof-of-concept/: main.py  pstg-pt1-pt2.py
src/pstg/app/: collector.py  modbus_config.py  modbus_corfig.py  read_config.py  read_signal_config.py  signal_config.py
src/pstg/domain/: connection_state.py  error_info.py  kind_state.py  modbus_config.py  modbus_device_read_settings.py  poll_result.py  raw_block_result.py  reader.py  registers_modbus_device_settings.py  (+5 more)
tests/: conftest.py  test_poll_device_fallback.py  test_poll_forever_reconnect.py  test_read_block_device_error.py  test_read_block_success.py  test_read_signals.py  test_real_server_fc04_read.py  test_real_server_poll_device_device_error.py  test_real_server_poll_device_success.py  test_real_server_signal_values.py  test_simulator_auto_update.py  test_simulator_config.py  test_simulator_server_runtime.py
tests/helpers/: mock_modbus_server.py  modbus_test_server.py  signals_modbus_test_server.py
(+12 files in other folders)
